src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsT-omT-dwU-dhU-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized true\n    default-column-width {  }\n    default-window-height {  }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1280 × 0, bounds: 1280 × 720, states: []
size: 1280 × 0, bounds: 1280 × 720, states: [Activated]
